[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "airlock"
version = "0.1.0"
description = "A CLI tool to audit code changes using AI before you commit."
dependencies = [
    "openai",
    "typer",
    "rich",
    "python-dotenv"
]
requires-python = ">=3.7"

[project.scripts]
airlock = "airlock.main:app"